# clipwright

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  SKILL.md  install.sh  pyproject.toml
.github/workflows/: ci.yml
course/: clipwright-course.html
desktop/: package.json  pnpm-lock.yaml  tailwind.config.js
desktop/src/: App.tsx  index.css
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/src/: lib.rs  state.rs
desktop/src-tauri/src/commands/: claude.rs  clipwright.rs  mod.rs  project.rs  watcher.rs
desktop/src/components/: ChatDock.tsx  ClipDetail.tsx  ClipList.tsx  ErrorBoundary.tsx  FileViewer.tsx  FilesPane.tsx  FinalRenderPane.tsx  LogPane.tsx  PipelineBar.tsx  ProjectRail.tsx  SessionsPane.tsx  VideoRail.tsx
desktop/src/components/timeline/: TimelineMode.tsx
desktop/src/lib/: icons.tsx  ipc.ts  types.ts
desktop/src/routes/: ProjectPicker.tsx  Workspace.tsx
examples/hello-world/: .clipwright.json  README.md  demo.py  script.json
mockups/: FLOW.md  clipwright-ui.html
remotion/: .gitignore  package-lock.json  package.json  tsconfig.json
remotion/src/: CameraWrapper.tsx  Captions.tsx  Root.tsx  SegmentClip.tsx  Video.tsx  schema.ts
scripts/: install-remotion-skill.sh  make_gradients.py
src/clipwright/: cli.py  config.py  ffmpeg.py  fonts.py  migrate.py
src/clipwright/captions/: chunker.py  png_renderer.py
src/clipwright/edit/: keyframes.py  segments.py  trim.py
src/clipwright/outro/: brand.py  render.py
src/clipwright/plan/: __init__.py  executor.py  schema.py  script_skeleton.py
src/clipwright/record/: playwright_recorder.py
src/clipwright/render/: compose_vertical.py  composer.py  remotion_backend.py
src/clipwright/tts/: __init__.py  base.py  elevenlabs.py  kokoro.py  piper.py
templates/captions/: bold-overlay.json  natural-sentence.json
templates/fonts/: README.md
templates/gradients/: neutral.json  warm.json
templates/outros/: cyberpunk.json  minimal.json
tests/: test_chunker.py  test_compose_vertical.py  test_keyframes.py  test_script_skeleton.py  test_segments.py  test_trim.py
