[package]
name = "desktop"
version = "0.1.0"
description = "Clipwright Desktop"
authors = ["Lucien"]
edition = "2021"

[lib]
name = "desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
notify = "6"
notify-debouncer-mini = "0.4"
anyhow = "1"
dirs = "5"
once_cell = "1"
uuid = { version = "1", features = ["v4"] }
